--- a/client/pc/index.html
+++ b/client/pc/index.html
@@ -11,6 +11,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="../jquery.js" type="text/javascript"></script>
         <script src="../socket-io.js" type="text/javascript"></script>
+        <script src="../tools.js" type="text/javascript" charset="utf-8"></script>
         <script src="../coms.js" type="text/javascript"></script>
         <script src="../gui.js" type="text/javascript"></script>
         <script src="pc.js" type="text/javascript"></script>
@@ -39,6 +40,6 @@ and open the template in the editor.
                 <a>Inv</a>
             </div>
         </div>
-        
+
     </body>
 </html>
