--- a/client/pc/index.html
+++ b/client/pc/index.html
@@ -9,6 +9,7 @@ and open the template in the editor.
         <title>DnD Com</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="../version.js" type="text/javascript" charset="utf-8"></script>
         <script src="../jquery.js" type="text/javascript"></script>
         <script src="../socket-io.js" type="text/javascript"></script>
         <script src="../tools.js" type="text/javascript" charset="utf-8"></script>
@@ -22,6 +23,7 @@ and open the template in the editor.
             <a class="button" name="Comms">Comms</a>
             <a class="button" name="Inventory">Inventory</a>
             <a class="button" name="stuff">stuff</a>
+            <span class="text" id="version"></span>
         </div>
         <div id="tabContent">
             <div class="tab" name="Comms">
