--- a/client/createCharacter/index.html
+++ b/client/createCharacter/index.html
@@ -3,11 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Create a character</title>
-        <link rel="stylesheet" href="/dnd/res/css/master.css">
-        <link rel="stylesheet" href="/dnd/res/js/imagePicker/image-picker.css">
+        <link rel="stylesheet" href="../res/css/master.css">
+        <link rel="stylesheet" href="../res/js/imagePicker/image-picker.css">
         <link rel="stylesheet" href="index.css">
-        <script src="/dnd/res/js/jquery.js" charset="utf-8"></script>
-        <script src="/dnd/res/js/imagePicker/image-picker.js" charset="utf-8"></script>
+        <script src="../res/js/jquery.js" charset="utf-8"></script>
+        <script src="../res/js/coms.js" charset="utf-8"></script>
+        <script src="../res/js/socket-io.js" charset="utf-8"></script>
+        <script src="../res/js/gui.js" charset="utf-8"></script>
+        <script src="../res/js/imagePicker/image-picker.js" charset="utf-8"></script>
         <script src="index.js" charset="utf-8"></script>
     </head>
     <body>
