--- a/client/chooseCharacter/index.html
+++ b/client/chooseCharacter/index.html
@@ -3,13 +3,19 @@
     <head>
         <meta charset="utf-8">
         <title>Choose your character</title>
-        <link rel="stylesheet" href="/dnd/res/css/master.css">
+        <link rel="stylesheet" href="../res/css/master.css">
         <link rel="stylesheet" href="index.css">
+        <script src="../res/js/jquery.js" charset="utf-8"></script>
+        <script src="../res/js/socket-io.js" charset="utf-8"></script>
+        <script src="../res/js/coms.js" charset="utf-8"></script>
+        <script src="../res/js/gui.js" charset="utf-8"></script>
+        <script src="index.js" charset="utf-8"></script>
     </head>
     <body>
         <div class="center box">
             <h1>Choose your character</h1>
             <div class="box characters">
+
                 <div class="character button" id="add" onclick="window.location.href = '../createCharacter'">
                     <i class="icon">add</i>
                 </div>
