added client config

--- a/client/client/index.html
+++ b/client/client/index.html
@@ -9,6 +9,7 @@ and open the template in the editor.
         <title>DnD Com</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="../res/js/config.js" charset="utf-8"></script>
         <script src="../res/js/version.js" type="text/javascript" charset="utf-8"></script>
         <script src="../res/js/jquery.js" type="text/javascript"></script>
         <script src="../res/js/socket-io.js" type="text/javascript"></script>
