--- a/client/createCharacter/index.html
+++ b/client/createCharacter/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="../res/css/master.css">
         <link rel="stylesheet" href="../res/js/imagePicker/image-picker.css">
         <link rel="stylesheet" href="index.css">
+        <script src="../res/js/config.js" charset="utf-8"></script>
         <script src="../res/js/jquery.js" charset="utf-8"></script>
         <script src="../res/js/coms.js" charset="utf-8"></script>
         <script src="../res/js/socket-io.js" charset="utf-8"></script>
