--- a/client/chooseCharacter/index.html
+++ b/client/chooseCharacter/index.html
@@ -5,6 +5,7 @@
         <title>Choose your character</title>
         <link rel="stylesheet" href="../res/css/master.css">
         <link rel="stylesheet" href="index.css">
+        <script src="../res/js/config.js" charset="utf-8"></script>
         <script src="../res/js/jquery.js" charset="utf-8"></script>
         <script src="../res/js/socket-io.js" charset="utf-8"></script>
         <script src="../res/js/coms.js" charset="utf-8"></script>
