--- a/client/client/index.html
+++ b/client/client/index.html
@@ -18,34 +18,44 @@ and open the template in the editor.
         <script src="../res/js/coms.js" type="text/javascript"></script>
         <script src="../res/js/gui.js" type="text/javascript"></script>
         <script src="pc.js" type="text/javascript"></script>
-        <link rel="stylesheet" href="../res/css/master.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <!--link rel="stylesheet" href="../res/css/master.css"-->
         <link href="client.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <div id="tabHandles">
-            <a class="button tabHandle" name="Comms">Comms</a>
-            <a class="button tabHandle" name="Inventory">Inventory</a>
-            <a class="button" name="logout" id="logout">logout</a>
-            <span class="text" id="version"></span>
-            <i class="icon" id="connected"></i>
-        </div>
-        <div id="tabContent">
-            <div class="tab" name="Comms">
-                <div id="contactList">
-
-                </div>
-                <div id="messageList">
-
-                </div>
-                <div id="footer">
-                    <textarea id="messageInput" rows="2" cols="150"></textarea>
-                    <a class="button">Send</a>
+        <div class="wrapper">
+            <div id="tabHandles" class="ribbon">
+                <div class="ribbon-content">
+                    <div class="nav">
+                        <a class="button tabHandle" name="Comms"><i class="fa fa-comments"></i></a>
+                        <a class="button tabHandle" name="Inventory"><i class="fa fa-suitcase"></i></a>
+                        <a class="button" name="logout" id="logout"><i class="fa fa-power-off"></i></a>
+                    </div>
+                    <div class="nav-right">
+                        <i class="icon" id="connected"></i>
+                        <span class="text" id="version"></span>
+                    </div>
                 </div>
             </div>
-            <div class="tab" name="Inventory">
-                <a>Inv</a>
+            <div id="tabContent">
+                <div class="tab" name="Comms">
+                    <div class="row">
+                        <div id="contactList">
+
+                        </div>
+                        <div id="messageList">
+
+                        </div>
+                    </div>
+                    <div id="footer">
+                        <textarea id="messageInput" rows="2" cols="150"></textarea>
+                        <a class="button">Send</a>
+                    </div>
+                </div>
+                <div class="tab" name="Inventory">
+                    <a>Inv</a>
+                </div>
             </div>
         </div>
-
     </body>
 </html>
