--- a/client/client/index.html
+++ b/client/client/index.html
@@ -19,6 +19,7 @@ and open the template in the editor.
         <script src="../res/js/gui.js" type="text/javascript"></script>
         <script src="pc.js" type="text/javascript"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
         <!--link rel="stylesheet" href="../res/css/master.css"-->
         <link href="client.css" rel="stylesheet" type="text/css"/>
     </head>
@@ -29,6 +30,7 @@ and open the template in the editor.
                     <div class="nav">
                         <a class="button tabHandle" name="Comms"><i class="fa fa-comments"></i></a>
                         <a class="button tabHandle" name="Inventory"><i class="fa fa-suitcase"></i></a>
+                        <a class="button tabHandle" name="Statistics"><i class="fas fa-dice"></i></a>
                         <a class="button" name="logout" id="logout"><i class="fa fa-power-off"></i></a>
                     </div>
                     <div class="nav-right">
@@ -54,6 +56,49 @@ and open the template in the editor.
                 </div>
                 <div class="tab" name="Inventory">
                     <a>Inv</a>
+                </div>
+                <div class="tab" name="Statistics">
+                    <div id="value">
+
+                    </div>
+                    <div id="numpad">
+                        <a class="button number" value="0">
+                            0
+                        </a>
+                        <a class="button" id="reset">
+                            reset
+                        </a>
+                        <a class="button" id="send">
+                            send
+                        </a>
+                        <a class="button number" value="1">
+                            1
+                        </a>
+                        <a class="button number" value="2">
+                            2
+                        </a>
+                        <a class="button number" value="3">
+                            3
+                        </a>
+                        <a class="button number" value="4">
+                            4
+                        </a>
+                        <a class="button number" value="5">
+                            5
+                        </a>
+                        <a class="button number" value="6">
+                            6
+                        </a>
+                        <a class="button number" value="7">
+                            7
+                        </a>
+                        <a class="button number" value="8">
+                            8
+                        </a>
+                        <a class="button number" value="9">
+                            9
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
