--- a/client/client/index.html
+++ b/client/client/index.html
@@ -22,6 +22,7 @@ and open the template in the editor.
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
         <!--link rel="stylesheet" href="../res/css/master.css"-->
         <link href="client.css" rel="stylesheet" type="text/css"/>
+        <link rel="stylesheet" href="bubble.css">
     </head>
     <body>
         <div class="wrapper">
