added compact design

--- a/client/client/index.html
+++ b/client/client/index.html
@@ -105,7 +105,9 @@ and open the template in the editor.
                     <label for="notifications">Enable notifications:</label>
                     <input type="checkbox" name="notifications" id="notifications"><br>
                     <label for="remember">Remember me:</label>
-                    <input type="checkbox" name="remember" id="remember">
+                    <input type="checkbox" name="remember" id="remember"><br>
+                    <label for="compact">Compact design:</label>
+                    <input type="checkbox" name="compact" id="compact">
                 </div>
             </div>
         </div>
