unfocused notification setting

--- a/client/client/index.html
+++ b/client/client/index.html
@@ -104,6 +104,8 @@ and open the template in the editor.
                 <div class="tab" name="Settings">
                     <label for="notifications">Enable notifications:</label>
                     <input type="checkbox" name="notifications" id="notifications"><br>
+                    <label for="notifications-unfocused" style="margin-left: 20px;">only when unfocused:</label>
+                    <input type="checkbox" name="notifications-unfocused" id="notifications-unfocused"><br>
                     <label for="remember">Remember me:</label>
                     <input type="checkbox" name="remember" id="remember"><br>
                     <label for="compact">Compact design:</label>
