--- a/client/client/index.html
+++ b/client/client/index.html
@@ -102,14 +102,24 @@ and open the template in the editor.
                     </div>
                 </div>
                 <div class="tab" name="Settings">
-                    <label for="notifications">Enable notifications:</label>
-                    <input type="checkbox" name="notifications" id="notifications"><br>
-                    <label for="notifications-unfocused" style="margin-left: 20px;">only when unfocused:</label>
-                    <input type="checkbox" name="notifications-unfocused" id="notifications-unfocused"><br>
-                    <label for="remember">Remember me:</label>
-                    <input type="checkbox" name="remember" id="remember"><br>
-                    <label for="compact">Compact design:</label>
-                    <input type="checkbox" name="compact" id="compact">
+                    <table>
+                        <tr>
+                            <td><label for="notifications">Enable notifications:</label></td>
+                            <td><input type="checkbox" name="notifications" id="notifications"></td>
+                        </tr>
+                        <tr>
+                            <td><label for="notifications-unfocused" style="margin-left: 20px;">only when unfocused:</label></td>
+                            <td><input type="checkbox" name="notifications-unfocused" id="notifications-unfocused"></td>
+                        </tr>
+                        <tr>
+                            <td><label for="remember">Remember me:</label></td>
+                            <td><input type="checkbox" name="remember" id="remember"></td>
+                        </tr>
+                        <tr>
+                            <td><label for="compact">Compact design:</label></td>
+                            <td><input type="checkbox" name="compact" id="compact"></td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </div>
