--- a/client/client/index.html
+++ b/client/client/index.html
@@ -44,7 +44,12 @@ and open the template in the editor.
                 <div class="tab" name="Comms">
                     <div class="row">
                         <div id="contactList">
-
+                            <table>
+                                <tr>
+                                    <td><label for="filter">Filter</label></td>
+                                    <td><input type="checkbox" name="filter" id="filter"></td>
+                                </tr>
+                            </table>
                         </div>
                         <div id="messageList">
 
