added dice rolling

--- a/client/client/index.html
+++ b/client/client/index.html
@@ -30,7 +30,7 @@ and open the template in the editor.
                     <div class="nav">
                         <a class="button tabHandle" name="Comms"><i class="fa fa-comments"></i></a>
                         <a class="button tabHandle" name="Inventory"><i class="fa fa-suitcase"></i></a>
-                        <!--a class="button tabHandle" name="Statistics"><i class="fas fa-dice"></i></a-->
+                        <a class="button tabHandle" name="Statistics"><i class="fas fa-dice"></i></a>
                         <a class="button tabHandle" name="Settings"><i class="fa fa-cog"></i></a>
                         <a class="button" name="logout" id="logout"><i class="fa fa-power-off"></i></a>
                     </div>
@@ -64,7 +64,13 @@ and open the template in the editor.
                     <a>Inv</a>
                 </div>
                 <div class="tab" name="Statistics">
-                    <div id="value">
+                    <div id="dInput">
+                        <input type="text" name="dice" id="dice">
+                    </div>
+                    <div id="dOutput">
+
+                    </div>
+                    <!--div id="value">
 
                     </div>
                     <div id="numpad">
@@ -104,7 +110,7 @@ and open the template in the editor.
                         <a class="button number" value="9">
                             9
                         </a>
-                    </div>
+                    </div-->
                 </div>
                 <div class="tab" name="Settings">
                     <table>
