added io-req to client

--- a/client/client/index.html
+++ b/client/client/index.html
@@ -13,6 +13,7 @@ and open the template in the editor.
         <script src="../res/js/version.js" type="text/javascript" charset="utf-8"></script>
         <script src="../res/js/jquery.js" type="text/javascript"></script>
         <script src="../res/js/socket-io.js" type="text/javascript"></script>
+        <script src="../res/js/socket.io-request.js"></script>
         <script src="../res/js/tools.js" type="text/javascript" charset="utf-8"></script>
         <script src="../res/js/coms.js" type="text/javascript"></script>
         <script src="../res/js/gui.js" type="text/javascript"></script>
