added Map page, renamed guid to uid variable

--- a/client/client/index.html
+++ b/client/client/index.html
@@ -33,6 +33,7 @@ and open the template in the editor.
                         <a class="button tabHandle" name="Inventory"><i class="fa fa-suitcase"></i></a>
                         <a class="button tabHandle" name="Statistics"><i class="fas fa-dice"></i></a>
                         <a class="button tabHandle" name="Settings"><i class="fa fa-cog"></i></a>
+                        <a class="button tabHandle" name="Map"><i class="fas fa-compass"></i></a>
                         <a class="button" name="logout" id="logout"><i class="fa fa-power-off"></i></a>
                     </div>
                     <div class="nav-right">
