--- a/client/client/index.html
+++ b/client/client/index.html
@@ -114,6 +114,9 @@ and open the template in the editor.
                         </a>
                     </div-->
                 </div>
+                <div class="tab" name="Map">
+                    <p>some text</p>
+                </div>
                 <div class="tab" name="Settings">
                     <table>
                         <tr>
