--- a/client/client/index.html
+++ b/client/client/index.html
@@ -33,7 +33,7 @@ and open the template in the editor.
                         <a class="button tabHandle" name="Inventory"><i class="fa fa-suitcase"></i></a>
                         <a class="button tabHandle" name="Statistics"><i class="fas fa-dice"></i></a>
                         <a class="button tabHandle" name="Settings"><i class="fa fa-cog"></i></a>
-                        <a class="button tabHandle" name="Map"><i class="fas fa-compass"></i></a>
+                        <a class="button tabHandle" name="Map"><i class="fa fa-compass"></i></a>
                         <a class="button" name="logout" id="logout"><i class="fa fa-power-off"></i></a>
                     </div>
                     <div class="nav-right">
@@ -115,7 +115,8 @@ and open the template in the editor.
                     </div-->
                 </div>
                 <div class="tab" name="Map">
-                    <p>some text</p>
+                    <canvas id="myCanvas" style="border:1px solid #000000; background: #FFFFFF">Not suported</canvas>
+                    
                 </div>
                 <div class="tab" name="Settings">
                     <table>
